deployments/kubernetes/zitadel/local/listingkit-workbench-ingress-patch.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listingkit-workbench
  namespace: task-processor
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: listingkit.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listingkit-ui
                port:
                  name: http
  tls:
    - hosts:
        - listingkit.localhost
